@@ -32,8 +32,8 @@ html, .mini-player {
 }
 
 /* Clickable artist/album in queue */
-.v-list__tile__sub-title a {
- color: hsla(0,0%,100%,.7) !important;
+.v-list__tile__sub-title, .v-list__tile__sub-title a {
+ color: hsla(0,0%,100%,var(--sub-opacity)) !important;
 }
 
 .vue-splitter .splitter {
