@@ -27,8 +27,8 @@ html, .mini-player {
 }
 
 /* Clickable artist/album in queue */
-.v-list__tile__sub-title a {
- color: rgba(0,0,0,.54) !important;
+.v-list__tile__sub-title, .v-list__tile__sub-title a {
+ color: rgba(0,0,0,var(--sub-opacity)) !important;
 }
 
 .vue-splitter .splitter {
