@@ -139,7 +139,7 @@ function initApp(app) {
 
     // https://stackoverflow.com/questions/43329654/android-back-button-on-a-progressive-web-application-closes-de-app
     window.addEventListener('load', function() {
-        window.history.pushState({ noBackExitsApp: true }, '')
+        window.history.pushState({ noBackExitsApp: true }, '');
     }, false);
 
     window.addEventListener('popstate', function(event) {
