@@ -800,3 +800,8 @@ function addAndPlayAllActions(cmd) {
 
     return true;
 }
+
+function setFontSize(large) {
+    document.documentElement.style.setProperty('--std-font-size', large ? '19px' : '16px');
+    document.documentElement.style.setProperty('--small-font-size', large ? '18px' : '14px');
+}
